# python-cli-to-boutiques

./: LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: run_tests.yml
scripts/: create_descriptor.sh  main.py  run_argdump.py  run_clickdump.py  update_descriptor.py
tests/: conftest.py  test_create_descriptor.py  test_run_argdump.py  test_run_clickdump.py
tests/acceptance/: acceptance.yml  sample_parsers.py  test_acceptance.py
