[project]
name = "argparse-to-boutiques"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "argdump>=0.1.2",
]

[project.optional-dependencies]
validation = [
    "boutiques>=0.5.33",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
