[project]
name = "python-cli-to-boutiques"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "argdump>=0.1.2",
]

[project.optional-dependencies]
validation = [
    "boutiques>=0.5.33",
]

[tool.pytest.ini_options]
pythonpath = ["scripts"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
